--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
   "dependencies": {
     "@ethersproject/abstract-provider": "^5.5.1",
     "@ethersproject/abstract-signer": "^5.5.0",
-    "@ethersproject/providers": "^5.5.0"
+    "@ethersproject/logger": "^5.5.0",
+    "@ethersproject/networks": "^5.5.1",
+    "@ethersproject/properties": "^5.5.0",
+    "@ethersproject/providers": "^5.5.0",
+    "@ethersproject/web": "^5.5.1"
   },
   "devDependencies": {
     "@types/mocha": "^9.0.0",
