--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "node": "^12.x || >=14.x || >=16.x"
   },
   "scripts": {
-    "test": "NODE_ENV=test echo \"no test specified\" && exit 0",
-    "test:cov": "NODE_ENV=test echo \"no test specified\" && exit 0",
+    "test": "NODE_ENV=test mocha --require ts-node/register src/**/*.spec.ts",
+    "test:cov": "nyc npm run test",
     "build": "tsc --build ./tsconfig.json",
     "build-all": "npm run build-cjs && npm run build-esnext && npm run build-esm",
     "build-cjs": "tsc -p tsconfig.json --outDir lib -t es3 -m commonjs",
@@ -54,18 +54,22 @@
     "@ethersproject/web": "^5.5.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.0",
     "ts-node": "^10.4.0",
+    "tsd": "^0.19.0",
     "typescript": "^4.5.2"
   }
 }
