--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "near-rpc-providers",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1-alpha.2",
   "description": "Near JSON RPC Provider compatible with ethers.js",
   "author": "Blockcoders <engineering@blockcoders.io>",
   "license": "MIT",
@@ -17,13 +17,15 @@
     "test": "NODE_ENV=test mocha --require ts-node/register src/**/*.spec.ts",
     "test:watch": "NODE_ENV=test mocha --watch --watch-files src/**/*.ts --require ts-node/register src/**/*.spec.ts",
     "test:cov": "nyc npm run test",
+    "clean": "rm -rf ./lib ./lib.esm ./lib.esnext",
     "build": "tsc --build ./tsconfig.json",
     "build-all": "npm run build-cjs && npm run build-esnext && npm run build-esm",
     "build-cjs": "tsc -p tsconfig.json --outDir lib -t es3 -m commonjs",
     "build-esnext": "tsc -p tsconfig.json --outDir lib.esnext -t es2015 -m commonjs",
     "build-esm": "tsc -p tsconfig.json --outDir lib.esm -t es2015 -m es2015",
     "lint:ci": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "prepublishOnly": "npm run lint:ci && npm run test && npm run clean && npm run build-all"
   },
   "precommit": [
     "lint:ci",
