--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@ethersproject/networks": "^5.5.1",
     "@ethersproject/properties": "^5.5.0",
     "@ethersproject/providers": "^5.5.0",
-    "@ethersproject/web": "^5.5.1"
+    "@ethersproject/web": "^5.5.1",
+    "near-api-js": "^0.44.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
