--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "near-api-js": "^0.44.1"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
