--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
+    "@types/sinon": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.4",
@@ -72,6 +73,7 @@
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.0",
+    "sinon": "^12.0.1",
     "ts-node": "^10.4.0",
     "tsd": "^0.19.0",
     "typescript": "^4.5.2"
