--- a/package.json
+++ b/package.json
@@ -61,11 +61,14 @@
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
+    "@types/sinon": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -74,6 +77,7 @@
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.0",
+    "sinon": "^12.0.1",
     "ts-node": "^10.4.0",
     "tsd": "^0.19.0",
     "typescript": "^4.5.2"
