--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "near-rpc-providers",
-  "version": "0.1.0-rc.1",
+  "version": "0.1.0-rc.2",
   "description": "Near JSON RPC Provider compatible with ethers.js",
   "author": "Blockcoders <engineering@blockcoders.io>",
   "license": "MIT",
@@ -14,8 +14,8 @@
     "node": "^12.x || >=14.x || >=16.x"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --require ts-node/register src/**/*.spec.ts",
-    "test:watch": "NODE_ENV=test mocha --watch --watch-files src/**/*.ts --require ts-node/register src/**/*.spec.ts",
+    "test": "NODE_ENV=test mocha -t 60000 --require ts-node/register src/**/*.spec.ts",
+    "test:watch": "NODE_ENV=test mocha -t 60000 --watch --watch-files src/**/*.ts --require ts-node/register src/**/*.spec.ts",
     "test:cov": "nyc npm run test",
     "clean": "rm -rf ./lib ./lib.esm ./lib.esnext",
     "build": "tsc --build ./tsconfig.json",
